--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             
             <div class="info" data-aos="fade-in">
                 <h1 style="font-size: 60px;">About <span style="color:rgb(108, 160, 233); font-weight: bold;">Me</span></h1>
-                <h2 style="font-size: 25px;">My name's Paige, and I'm an aspiring full-stack developer.</h2>
+                <h2 style="font-size: 25px;">My name's Paige, a student and an aspiring full-stack developer.</h2>
 
                 <div class="about_info">
                     <p>
