removed some animations

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <div class="right_header">
                 <ul>
                     <li>
-                        <a href="#about_me">About Me</a>
+                        <a href="#about_me" class="underline_hover_effect">About Me</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio" class="underline_hover_effect">Portfolio</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact" class="underline_hover_effect">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
                 <div class="info">
                     <p>I'm Paige - a rising Junior studying Computer Science at Simmons University.
                         In my free time I enjoy playing Dungeons & Dragons, lifting, and learning 
-                        about website development. </p>
+                        about website development.</p>
                 </div>
                 
                 <div class ="buttons animation">
@@ -64,7 +64,7 @@
             
             <div class="info" data-aos="fade-in">
                 <h1 style="font-size: 60px;">About <span style="color:rgb(108, 160, 233); font-weight: bold;">Me</span></h1>
-                <h2 style="font-size: 25px;">My name's Paige, and I'm a student + aspiring full-stack developer.</h2>
+                <h2 style="font-size: 25px;">I'm Paige, a student and aspiring full-stack developer.</h2>
 
                 <div class="about_info">
                     <p>
