created project layout and styling

--- a/index.html
+++ b/index.html
@@ -96,7 +96,31 @@
         </section>
 
         <section id="portfolio" data-aos="fade-in">
-            <h1>Under construction!</h1>
+            <div class="container">
+                <h1 style="font-size: 60px;">Projects</h2>
+                    <div class="project-item">
+                        <img src="photos/rubytictactoe.png"alt="tic-tac-toe in terminal"/>
+                        <div class="project-description">
+                            <h2 class="project-title">Terminal Tic-Tac-Toe</h2>
+                            <h3 class="project-language">Ruby</h3>
+                            <p>Lorem ipsum nolar set amit, ratounda par flooga. Si niawo 
+                                felordunga etcha marnoogua. Vuluptatum, illum! Animi rerum corporis quidem
+                                soluta sed accusantium. Ladjiwo and setum.
+                            </p>
+                            <div class="project-buttons">
+                                <ul>
+                                    <li>
+                                        <button class="left-button">Know more</button>
+                                    </li>
+                                    <li>
+                                        <button class="right-button">Preview 🔗</button>
+                                        
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+            </div>
         </section>
 
         <section id="contact" data-aos="fade-in">
