--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <h3 class="project-language">HTML, CSS, Javascript</h3>
                             <p>Created with a combination of learning from <a class = "portfolio-link" href="https://www.theodinproject.com/">The Odin Project</a>, an open-source 
                                 <a class="portfolio-link" href="https://github.com/michalsnik/aos">animation library</a>,
-                                and inspiration from a <a class="portfolio-link">Wix template's graphic design</a>.
+                                and inspiration from a <a href="https://www.wix.com/website-template/view/html/2846?originUrl=https%3A%2F%2Fwww.wix.com%2Fwebsite%2Ftemplates%2Fhtml%2Fportfolio-cv%2Fpersonal&tpClick=view_button&esi=56094f69-d17b-4f72-8d19-a13cd5c9ec13" class="portfolio-link">Wix template's graphic design</a>.
                             </p>
                             <div class="project-buttons">
                                 <ul>
