rough draft done

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             <div class="right_header">
                 <ul>
                     <li>
-                        <a href="#about_me" class="underline_hover_effect">About Me</a>
+                        <a href="#about_me_link" class="underline_hover_effect">About Me</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="#portfolio" class="underline_hover_effect">Portfolio</a>
+                        <a href="#portfolio_link" class="underline_hover_effect">Portfolio</a>
                     </li>
                     <li>|</li>
                     <li>
-                        <a href="#contact" class="underline_hover_effect">Contact</a>
+                        <a href="#contact_link" class="underline_hover_effect">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -53,9 +53,9 @@
                 </div>
                 
                 <div class ="buttons animation">
-                    <a href="#about_me"><button style="background-color: rgb(108, 160, 233);">About Me</button></a>
-                    <a href="#portfolio"><button style="background-color:rgb(243, 140, 189)">Portfolio</button></a>
-                    <a href="#contact"><button style="background-color:rgb(222, 156, 106)">Contact</button></a>
+                    <a href="#about_me_link"><button style="background-color: rgb(108, 160, 233);">About Me</button></a>
+                    <a href="#portfolio_link"><button style="background-color:rgb(243, 140, 189)">Portfolio</button></a>
+                    <a href="#contact_link"><button style="background-color:rgb(222, 156, 106)">Contact</button></a>
                 </div>
             </div>
         </section>
@@ -63,7 +63,7 @@
         <section id="about_me" data-aos="slide-up">
             
             <div class="info">
-                <h1 style="font-size: 60px;">About <span style="color:rgb(108, 160, 233); font-weight: bold;">Me</span></h1>
+                <h1 id="about_me_link" style="font-size: 60px;">About <span style="color:rgb(108, 160, 233); font-weight: bold;">Me</span></h1>
                 <h2 style="font-size: 25px;">I'm Paige, a student and aspiring full-stack developer.</h2>
 
                 <div class="about_info">
@@ -97,7 +97,7 @@
 
         <section id="portfolio" data-aos="slide-up">
             <div class="container">
-                    <h1 style="font-size: 60px;">Projects</h1>
+                    <h1 id="portfolio_link" style="font-size: 60px;">Projects</h1>
                     <div class="project-item">
                         <img src="photos/rubytictactoe.png"alt="tic-tac-toe in terminal"/>
                         <div class="project-description">
@@ -183,7 +183,7 @@
         </section>
 
         <section id="contact" data-aos="slide-up">
-            <h1>Contact Me</h1>
+            <h1 id="contact_link">Contact Me</h1>
             <h2>I'll keep this one simple. :)</h2>
             <h2>paigethompson150@gmail.com</h2>
         </section>
